# healpix-autotools

./: .gitignore  Makefile.am  README.md  configure.ac
data/: Makefile.am
m4/: acx_cfitsio.m4  acx_fc_pp_define.m4  acx_fc_pp_srcext.m4  ax_python.m4
src/: Makefile.am  build_options.am
src/C/: Makefile.am
src/cxx/: Makefile.am
src/cxx/Healpix_cxx/: Makefile.am
src/cxx/alice/: Makefile.am
src/cxx/c_utils/: Makefile.am
src/cxx/cxxsupport/: Makefile.am  announce.cc
src/cxx/libfftpack/: Makefile.am
src/cxx/libsharp/: Makefile.am
src/cxx/test/: Makefile.am  runtest.sh
src/f90/: Makefile.am
src/f90/alteralm/: Makefile.am
src/f90/anafast/: Makefile.am
src/f90/hotspot/: Makefile.am
src/f90/libhealpix/: Makefile.am  extension.F90
src/f90/libhealpix-mpi/: Makefile.am
src/f90/libhpxgif/: Makefile.am  giftogd.c
src/f90/libsharp_f/: Makefile.am
src/f90/map2gif/: Makefile.am
src/f90/median_filter/: Makefile.am
src/f90/ngsims_full_sky/: Makefile.am
src/f90/plmgen/: Makefile.am
src/f90/process_mask/: Makefile.am
src/f90/smoothing/: Makefile.am
src/f90/synfast/: Makefile.am
src/f90/test/: Makefile.am  README  alt.par  ana.par  ana_cut.par  hot.par  med.par  ngfs.par  prmask.par  runtest.sh  smo.par  syn.par  udg.par
src/f90/ud_grade/: Makefile.am
src/healpy/: MANIFEST.in  Makefile.am  PKG-INFO  gen_setup.sh  setup.cfg.in  setup.py  setup.py.in
src/healpy/healpy/src/: _pixelfunc.cpp  _query_disc.cpp  _sphtools.cpp
src/idl/: Makefile.am  gen_launch.sh  hidl.in  hidlde.in
src/idl/misc/: init_healpix.pro
