
healpixextradir = $(datadir)/@PACKAGE@

healpixextra_DATA = pixel_window_n0002.fits \
                    pixel_window_n0004.fits \
                    pixel_window_n0008.fits \
                    pixel_window_n0016.fits \
                    pixel_window_n0032.fits \
                    pixel_window_n0064.fits \
                    pixel_window_n0128.fits \
                    pixel_window_n0256.fits \
                    pixel_window_n0512.fits \
                    pixel_window_n1024.fits \
                    pixel_window_n2048.fits \
                    pixel_window_n4096.fits \
                    pixel_window_n8192.fits \
                    weight_ring_n00002.fits \
                    weight_ring_n00004.fits \
                    weight_ring_n00008.fits \
                    weight_ring_n00016.fits \
                    weight_ring_n00032.fits \
                    weight_ring_n00064.fits \
                    weight_ring_n00128.fits \
                    weight_ring_n00256.fits \
                    weight_ring_n00512.fits \
                    weight_ring_n01024.fits \
                    weight_ring_n02048.fits \
                    weight_ring_n04096.fits \
                    weight_ring_n08192.fits

EXTRA_DIST = pixel_window_n0002.fits \
                    pixel_window_n0004.fits \
                    pixel_window_n0008.fits \
                    pixel_window_n0016.fits \
                    pixel_window_n0032.fits \
                    pixel_window_n0064.fits \
                    pixel_window_n0128.fits \
                    pixel_window_n0256.fits \
                    pixel_window_n0512.fits \
                    pixel_window_n1024.fits \
                    pixel_window_n2048.fits \
                    pixel_window_n4096.fits \
                    pixel_window_n8192.fits \
                    weight_ring_n00002.fits \
                    weight_ring_n00004.fits \
                    weight_ring_n00008.fits \
                    weight_ring_n00016.fits \
                    weight_ring_n00032.fits \
                    weight_ring_n00064.fits \
                    weight_ring_n00128.fits \
                    weight_ring_n00256.fits \
                    weight_ring_n00512.fits \
                    weight_ring_n01024.fits \
                    weight_ring_n02048.fits \
                    weight_ring_n04096.fits \
                    weight_ring_n08192.fits
