

EXTRA_DIST = \
cl.fits

dist_noinst_SCRIPTS = runtest.sh

TESTS = runtest.sh

CLEANFILES = \
test2.fits \
test3.fits \
test4.fits \
test5.fits \
test6.tga \
test_alice1.tga \
test_alice3_background.fits \
test_alice3_texture.fits \
test.alm \
test.fits \
test2.alm \
test2.tga \
test3.tga \
test4.tga \
test5.tga \
test7.fits \
test_alice2.tga \
test_alice3_mod_texture.fits \
test_alice3.tga \
test_cl.fits \
test.tga

